mapper,dao,manager,Sketches Action Demo

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -408,3 +408,6 @@ provider.less.money.company=Companyn edqan pox 4uni
 provider.branch.provide.not.taken=Branchin pox tvel eq bayc der het 4i veradadzrel
 provider.branch.not.provided=Branchin pox 4en tvel bayc het en vercnum
 take.less.money.branch=Branchn edqan pox 4uni
+
+#sketches
+menu.sketches=Sketches
