http://summernote.org/examples/

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -411,3 +411,6 @@ take.less.money.branch=Branchn edqan pox 4uni
 
 #sketches
 menu.sketches=Sketches
+sketches.title=Sketch
+sketches.title.add=Sketch Add
+
