--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -413,4 +413,5 @@ take.less.money.branch=Branchn edqan pox 4uni
 menu.sketches=Sketches
 sketches.title=Sketch
 sketches.title.add=Sketch Add
-
+#
+more.info.button=more info
