--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -2,6 +2,7 @@ error.internal=Internal error occurred. Please try later
 errors.required=The field {0} required
 errors.invalid.captcha.or.psw=Invalid captcha or password
 err.msg.not.authenticated=Please login
+page.info.list.data.found=Data not found
 
 label.password=Password
 label.selectAll=Select All
@@ -13,16 +14,18 @@ label.nothingSelected=Nothing Selected
 button.login=Log in
 button.create.account=create account
 
+page.home.title=Welcome
+
 page.area.header.alt.Login.Icon=Login
 page.area.header.placeholder.Username=Username
 page.area.header.placeholder.Password=Password
 page.area.header.alt.Show.Hide.Password=Show/Hide Password
 
-page.branches.main.list.table.edit=Edit
-page.branches.main.list.table.details=Details
-page.branches.main.list.table.datas=Data
-page.branches.main.list.table.delete=Delete
-page.branches.main.list.table.go=GO
+page.main.list.table.edit=Edit
+page.main.list.table.details=Details
+page.main.list.table.datas=Data
+page.main.list.table.delete=Delete
+page.main.list.table.go=GO
 img/general/avatars/avatar.png=User photo
 
 
@@ -34,7 +37,14 @@ header.Sign.Out=Sign Out
 menu.General=General
 
 #sketches
-menu.sketches=Sketches
+admin.menu.about=About
+admin.menu.machine=Machine
+admin.menu.price=Price List
+admin.menu.sketches=Sketches
+admin.menu.workScheme=Work Scheme
+
+
+
 sketches.title=Sketch
 sketches.title.add=Sketch Add
 #
