--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -7,12 +7,24 @@ label.password=Password
 label.selectAll=Select All
 label.selectNone=Select None
 label.reset=Reset
+label.image=Image
+label.add=Add
+label.Save=Save
+label.language=Language
+label.edit=Edit
+label.delete=Delete
+label.All=All
 label.search=Search
+label.back=Back
+label.forward=Forward
+label.previous=Previous
+label.next=Next
+label.add.record=Add new record
 label.nothingSelected=Nothing Selected
 button.login=Log in
 button.create.account=create account
-page.home.title=Welcome
-page.area.header.alt.Login.Icon=Login
+page.home.title.admin=Welcome
+page.area.header.alt.Login.Admin=Admin Login
 page.area.header.placeholder.Username=Username
 page.area.header.placeholder.Password=Password
 page.area.header.alt.Show.Hide.Password=Show/Hide Password
@@ -35,6 +47,7 @@ admin.menu.sketches=Sketches
 admin.menu.workScheme=Work Scheme
 sketches.title=Sketch
 sketches.title.add=Sketch Add
+sketches.title.Product=Product
 #
 more.info.button=more info
 #menu
@@ -49,3 +62,12 @@ menu.about.phone=phone
 #header
 header.banner=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u043E\u0438\u0437\u0432\u043E\u0434\u0441\u0442\u0432\u043E, 100% \u0441\u0430\u043C\u044B\u0435 \u043D\u0438\u0437\u043A\u0438\u0435 \u0446\u0435\u043D\u044B!
 header.promotions=Special promotions
+#price.list
+price.list.name=name
+price.list.budgetary=budgetary
+price.list.standard=standard
+price.list.premium=premium
+price.list.productionTime=productionTime
+#page
+page.home.title=\u00ABNMG \u041A\u043E\u0432\u043A\u0430\u00BB \u0434\u0430\u0432\u043D\u043E \u0438 \u043F\u0440\u043E\u0447\u043D\u043E \u043E\u0431\u043E\u0441\u043D\u043E\u0432\u0430\u043B\u0430\u0441\u044C \u043D\u0430 \u0440\u044B\u043D\u043A\u0435 \u043C\u0435\u0442\u0430\u043B\u043B\u043E\u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438
+page.home.content=\u041D\u0430 \u0441\u0435\u0433\u043E\u0434\u043D\u044F\u0448\u043D\u0438\u0439 \u0434\u0435\u043D\u044C \u0432 \u043D\u0430\u0448\u0435\u0439 \u041A\u043E\u043C\u043F\u0430\u043D\u0438\u0438 \u0440\u0430\u0431\u043E\u0442\u0430\u044E\u0442 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u044B \u0442\u043E\u043B\u044C\u043A\u043E \u0432\u044B\u0441\u043E\u043A\u043E\u0433\u043E \u0443\u0440\u043E\u0432\u043D\u044F, \u0443 \u043D\u0430\u0441 \u0432\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0430\u043A\u0430\u0437\u0430\u0442\u044C \u043A\u043E\u0432\u0430\u043D\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u043B\u044E\u0431\u043E\u0439 \u0441\u043B\u043E\u0436\u043D\u043E\u0441\u0442\u0438. \u041C\u044B \u0437\u0430\u043D\u0438\u043C\u0430\u0435\u043C \u0437\u0430\u0441\u043B\u0443\u0436\u0435\u043D\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E \u0441\u0440\u0435\u0434\u0438 \u043A\u043E\u043D\u043A\u0443\u0440\u0435\u043D\u0442\u043E\u0432. \u041E\u043A\u0430\u0437\u044B\u0432\u0430\u044F \u0448\u0438\u0440\u043E\u043A\u0438\u0439 \u0441\u043F\u0435\u043A\u0442\u0440 \u0443\u0441\u043B\u0443\u0433 \u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0438 \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438 \u043C\u0435\u0442\u0430\u043B\u043B\u0430, \u043D\u0430\u0448\u0438 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u044B \u0432\u043D\u0438\u043C\u0430\u0442\u0435\u043B\u044C\u043D\u043E \u0441\u043B\u0435\u0434\u044F\u0442 \u0437\u0430 \u043A\u0430\u0447\u0435\u0441\u0442\u0432\u043E\u043C \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u044B\u0445 \u0440\u0430\u0431\u043E\u0442 . \u041D\u0430\u0448\u0435 \u043F\u0440\u0435\u0434\u043F\u0440\u0438\u044F\u0442\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u0442 \u043A\u0430\u043A \u0441 \u043E\u043F\u0442\u043E\u0432\u044B\u043C\u0438 \u0437\u0430\u043A\u0430\u0437\u0430\u043C\u0438 , \u0442\u0430\u043A \u0438 \u0441 \u0438\u043D\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043B\u044C\u043D\u044B\u043C\u0438.
