--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -6,7 +6,8 @@ label.password=Password
 label.selectAll=Select All
 label.selectNone=Select None
 label.reset=Reset
-label.search=Search
+label.search=\u041F\u043E\u0438\u0441\u043A
+label.find=\u041D\u0430\u0439\u0442\u0438
 label.nothingSelected=Nothing Selected
 button.login=Log in
 button.create.account=create account
@@ -40,6 +41,9 @@ menu.about.phone=\u0442\u0435\u043B\u0435\u0444\u043E\u043D :
 #header
 header.banner=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u043E\u0438\u0437\u0432\u043E\u0434\u0441\u0442\u0432\u043E, 100% \u0441\u0430\u043C\u044B\u0435 \u043D\u0438\u0437\u043A\u0438\u0435 \u0446\u0435\u043D\u044B!
 header.promotions=\u0421\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0435 \u0410\u041A\u0426\u0418\u0418
+footer.callYouBack=\u041C\u044B \u0432\u0430\u043C \u043F\u0435\u0440\u0435\u0437\u0432\u043E\u043D\u0438\u043C
+footer.CallMe=\u041F\u043E\u0437\u0432\u043E\u043D\u0438 \u043C\u043D\u0435
+footer.callBack=\u041F\u0435\u0440\u0435\u0437\u0432\u043E\u043D\u0438
 
 
 
