--- a/src/main/resources/message_hy.properties
+++ b/src/main/resources/message_hy.properties
@@ -40,6 +40,8 @@ menu.about.phone=\u0442\u0435\u043B\u0435\u0444\u043E\u043D :
 #header
 header.banner=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u043E\u0438\u0437\u0432\u043E\u0434\u0441\u0442\u0432\u043E, 100% \u0441\u0430\u043C\u044B\u0435 \u043D\u0438\u0437\u043A\u0438\u0435 \u0446\u0435\u043D\u044B!
 header.promotions=\u0421\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0435 \u0410\u041A\u0426\u0418\u0418
+page.home.title=hayeren
+footer.info=Hayeren2
 
 
 
