--- a/src/main/resources/message_hy.properties
+++ b/src/main/resources/message_hy.properties
@@ -26,6 +26,9 @@ header.Settings=Settings
 header.Help=Help
 header.Sign.Out=Sign Out
 menu.General=General
+admin.menu.sketches=\u044D\u0441\u043A\u0438\u0437
+admin.menu.workScheme=Work Scheme
+sketches.title=\u044D\u0441\u043A\u0438\u0437
 more.info.button=\u043F\u043E\u0434\u0440\u043E\u0431\u043D\u0435\u0435
 #title
 title.home=\u0425\u0443\u0434\u043E\u0436\u0435\u0441\u0442\u0432\u0435\u043D\u043D\u0430\u044F \u043A\u043E\u0432\u043A\u0430
