--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -97,3 +97,4 @@ feedback.form.email=Your email (required)
 feedback.form.subject=Subject
 feedback.form.message=Message
 mail.success=Thank you for your feedback. We will contact you.
+page.search.title=Search result for
