--- a/src/main/resources/message_hy.properties
+++ b/src/main/resources/message_hy.properties
@@ -8,6 +8,8 @@ label.selectNone=Select None
 label.reset=Reset
 label.search=Search
 label.send=\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
+label.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
+label.thanks=\u0421\u043F\u0430\u0441\u0438\u0431\u043E
 label.nothingSelected=Nothing Selected
 button.login=Log in
 button.create.account=create account
@@ -67,6 +69,11 @@ feedback.form.email=\u0412\u0430\u0448 e-mail (\u043E\u0431\u044F\u0437\u0430\u0
 feedback.form.subject=\u0422\u0435\u043C\u0430
 feedback.form.message=\u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
 mail.success=\u0421\u043F\u0430\u0441\u0438\u0431\u043E \u0437\u0430 \u0432\u0430\u0448 \u043E\u0442\u0437\u044B\u0432. \u041C\u044B \u0441\u0432\u044F\u0436\u0435\u043C\u0441\u044F \u0441 \u0432\u0430\u043C\u0438.
+right.banner.our.contact=\u041D\u0430\u0448\u0438 \u043A\u043E\u043D\u0442\u0430\u043A\u0442\u044B
+right.banner.interesting=\u0412\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0412\u0430\u0441 \u0437\u0430\u0438\u043D\u0442\u0435\u0440\u0435\u0441\u0443\u044E\u0442
+right.banner.offer.product=\u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C \u0438\u0437\u0434\u0435\u043B\u0438\u0435
+right.banner.useful.articles=\u041F\u043E\u043B\u0435\u0437\u043D\u044B\u0435 \u0441\u0442\u0430\u0442\u044C\u0438
+footer.tel=Tel
 
 
 
