--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -59,7 +59,7 @@ more.info.button=more info
 menu.home=Home
 menu.services=Services
 menu.how.we.work=How we work
-menu.our.works=How we work
+menu.our.works=Our products
 page.our.works.content=\u0424\u043E\u0442\u043E\u0430\u043B\u044C\u0431\u043E\u043C \u043D\u0430\u0448\u0438\u0445 \u0440\u0430\u0431\u043E\u0442 \u043F\u043E\u0441\u0442\u043E\u044F\u043D\u043D\u043E \u043F\u043E\u043F\u043E\u043B\u043D\u044F\u0435\u0442\u0441\u044F, \u0437\u0434\u0435\u0441\u044C \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D \u0434\u0430\u043B\u0435\u043A\u043E \u043D\u0435 \u0432\u0435\u0441\u044C \u0441\u043F\u0438\u0441\u043E\u043A \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u044B\u0445 \u0437\u0430\u043A\u0430\u0437\u043E\u0432
 menu.price=Prices
 menu.feedback=Feedback
@@ -75,6 +75,9 @@ price.list.budgetary=budgetary
 price.list.standard=standard
 price.list.premium=premium
 price.list.productionTime=productionTime
+#
+work.scheme.name=name
+work.scheme.description=description
 #page
 page.title=MNG \u041A\u043E\u0432\u043A\u0430
 page.home.title=Angleren
@@ -107,3 +110,4 @@ right.banner.useful.articles=Useful articles
 footer.tel=Tel
 
 page.search.title=Search result for
+page.how.we.work=\u041D\u0430\u0448\u0430 \u043A\u043E\u043C\u043F\u0430\u043D\u0438\u044F \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u0442 \u043F\u043E \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u0439 \u0441\u0445\u0435\u043C\u0435
