--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -29,7 +29,8 @@ header.Settings=Settings
 header.Help=Help
 header.Sign.Out=Sign Out
 menu.General=General
-admin.menu.sketches=\u044D\u0441\u043A\u0438\u0437
+admin.menu.abouter=About
+admin.menu.sketches=Sketches
 admin.menu.workScheme=Work Scheme
 sketches.title=\u044D\u0441\u043A\u0438\u0437
 more.info.button=\u043F\u043E\u0434\u0440\u043E\u0431\u043D\u0435\u0435
@@ -56,7 +57,7 @@ price.list.standard=\u0421\u0442\u0430\u043D\u0434\u0430\u0440\u0442\u043D\u044B
 price.list.premium=\u041F\u0440\u0435\u043C\u0438\u0430\u043B\u044C\u043D\u044B\u0435
 price.list.productionTime=\u0421\u0440\u043E\u043A\u0438 \u0438\u0437\u0433\u043E\u0442\u043E\u0432\u043B\u0435\u043D\u0438\u044F
 page.home.title=\u00ABMNG \u041A\u043E\u0432\u043A\u0430\u00BB \u0434\u0430\u0432\u043D\u043E \u0438 \u043F\u0440\u043E\u0447\u043D\u043E \u043E\u0431\u043E\u0441\u043D\u043E\u0432\u0430\u043B\u0430\u0441\u044C \u043D\u0430 \u0440\u044B\u043D\u043A\u0435 \u043C\u0435\u0442\u0430\u043B\u043B\u043E\u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438
-footer.info=Russern2
+footer.info=&copy; 2017 \u041A\u043E\u0432\u0430\u043D\u044B\u0435 \u0438 \u0441\u0432\u0430\u0440\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u043D\u0430 \u0437\u0430\u043A\u0430\u0437 \u0432 \u041C\u043E\u0441\u043A\u0432\u0435 \u0438 \u041C\u043E\u0441\u043A\u043E\u0432\u0441\u043A\u043E\u0439 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
 footer.callYouBack=\u041C\u044B \u0432\u0430\u043C \u043F\u0435\u0440\u0435\u0437\u0432\u043E\u043D\u0438\u043C
 footer.CallMe=\u041F\u043E\u0437\u0432\u043E\u043D\u0438 \u043C\u043D\u0435
 footer.callBack=\u041F\u0435\u0440\u0435\u0437\u0432\u043E\u043D\u0438
