--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -55,12 +55,13 @@ sketches.title.add=Sketch Add
 sketches.title.Product=Product
 #
 more.info.button=more info
+title.home=MNG \u041A\u043E\u0432\u043A\u0430
 #menu
 menu.home=Home
 menu.services=Services
 menu.how.we.work=How we work
 menu.our.works=Gallery of our works
-page.our.works.content=\u0424\u043E\u0442\u043E\u0430\u043B\u044C\u0431\u043E\u043C \u043D\u0430\u0448\u0438\u0445 \u0440\u0430\u0431\u043E\u0442 \u043F\u043E\u0441\u0442\u043E\u044F\u043D\u043D\u043E \u043F\u043E\u043F\u043E\u043B\u043D\u044F\u0435\u0442\u0441\u044F, \u0437\u0434\u0435\u0441\u044C \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D \u0434\u0430\u043B\u0435\u043A\u043E \u043D\u0435 \u0432\u0435\u0441\u044C \u0441\u043F\u0438\u0441\u043E\u043A \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u044B\u0445 \u0437\u0430\u043A\u0430\u0437\u043E\u0432
+page.our.works.content=The photo album of our works is constantly replenished, here not all the list of completed orders is submitted
 menu.price=Prices
 menu.feedback=Feedback
 menu.about=About
@@ -68,35 +69,35 @@ menu.special.offer=Special offer
 menu.about.email=e-mail
 menu.about.phone=phone
 #header
-header.banner=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u043E\u0438\u0437\u0432\u043E\u0434\u0441\u0442\u0432\u043E, 100% \u0441\u0430\u043C\u044B\u0435 \u043D\u0438\u0437\u043A\u0438\u0435 \u0446\u0435\u043D\u044B!
+header.banner=Own production, 100% the lowest prices!
 header.promotions=Special promotions
 #price.list
 price.list.name=name
-price.list.budgetary=budgetary
-price.list.standard=standard
-price.list.premium=premium
-price.list.productionTime=productionTime
+price.list.budgetary=Budgetary
+price.list.standard=Standard
+price.list.premium=Premium
+price.list.productionTime=Production time
 #
 work.scheme.name=name
 work.scheme.description=description
 #page
 page.title=MNG \u041A\u043E\u0432\u043A\u0430
-page.home.title=Angleren
-page.home.content=\u041D\u0430 \u0441\u0435\u0433\u043E\u0434\u043D\u044F\u0448\u043D\u0438\u0439 \u0434\u0435\u043D\u044C \u0432 \u043D\u0430\u0448\u0435\u0439 \u041A\u043E\u043C\u043F\u0430\u043D\u0438\u0438 \u0440\u0430\u0431\u043E\u0442\u0430\u044E\u0442 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u044B \u0442\u043E\u043B\u044C\u043A\u043E \u0432\u044B\u0441\u043E\u043A\u043E\u0433\u043E \u0443\u0440\u043E\u0432\u043D\u044F, \u0443 \u043D\u0430\u0441 \u0432\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0430\u043A\u0430\u0437\u0430\u0442\u044C \u043A\u043E\u0432\u0430\u043D\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u043B\u044E\u0431\u043E\u0439 \u0441\u043B\u043E\u0436\u043D\u043E\u0441\u0442\u0438. \u041C\u044B \u0437\u0430\u043D\u0438\u043C\u0430\u0435\u043C \u0437\u0430\u0441\u043B\u0443\u0436\u0435\u043D\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E \u0441\u0440\u0435\u0434\u0438 \u043A\u043E\u043D\u043A\u0443\u0440\u0435\u043D\u0442\u043E\u0432. \u041E\u043A\u0430\u0437\u044B\u0432\u0430\u044F \u0448\u0438\u0440\u043E\u043A\u0438\u0439 \u0441\u043F\u0435\u043A\u0442\u0440 \u0443\u0441\u043B\u0443\u0433 \u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0438 \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438 \u043C\u0435\u0442\u0430\u043B\u043B\u0430, \u043D\u0430\u0448\u0438 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u044B \u0432\u043D\u0438\u043C\u0430\u0442\u0435\u043B\u044C\u043D\u043E \u0441\u043B\u0435\u0434\u044F\u0442 \u0437\u0430 \u043A\u0430\u0447\u0435\u0441\u0442\u0432\u043E\u043C \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u044B\u0445 \u0440\u0430\u0431\u043E\u0442 . \u041D\u0430\u0448\u0435 \u043F\u0440\u0435\u0434\u043F\u0440\u0438\u044F\u0442\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u0442 \u043A\u0430\u043A \u0441 \u043E\u043F\u0442\u043E\u0432\u044B\u043C\u0438 \u0437\u0430\u043A\u0430\u0437\u0430\u043C\u0438 , \u0442\u0430\u043A \u0438 \u0441 \u0438\u043D\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043B\u044C\u043D\u044B\u043C\u0438.
+page.home.title=\u00ABMNG \u041A\u043E\u0432\u043A\u0430\u00BB has long and firmly established itself in the metalworking market
+page.home.content=Our company has only a very high level of expertise in our work, and we can book your favorite items anywhere. We occupy a well-deserved place among the competitors. By distributing the spectrum of the spectrum in the field of machining, our experts will carefully examine the best practices. Our company is working with optical orders, and with individuality.
 #footer
 footer.info=&copy; 2017 \u041A\u043E\u0432\u0430\u043D\u044B\u0435 \u0438 \u0441\u0432\u0430\u0440\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u043D\u0430 \u0437\u0430\u043A\u0430\u0437 \u0432 \u041C\u043E\u0441\u043A\u0432\u0435 \u0438 \u041C\u043E\u0441\u043A\u043E\u0432\u0441\u043A\u043E\u0439 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
 footer.callYouBack=We"ll call you back in
 footer.CallMe=Call me
 footer.callBack=Call back
-price.list.title1=100% \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u044F \u043D\u0438\u0437\u043A\u043E\u0439 \u0446\u0435\u043D\u044B \u043D\u0430 \u043A\u043E\u0432\u0430\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F. \u0412 \u043E\u0442\u043B\u0438\u0447\u0438\u0435 \u043E\u0442 \u043C\u043D\u043E\u0433\u0438\u0445 \u043D\u0430\u0448\u0438\u0445 \u043A\u043E\u043D\u043A\u0443\u0440\u0435\u043D\u0442\u043E\u0432, \u0432\u044B\u0441\u0442\u0430\u0432\u043E\u0447\u043D\u044B\u0445 \u0437\u0430\u043B\u043E\u0432 \u0438 \u0434\u0440\u0443\u0433\u0438\u0445 \u043F\u0440\u043E\u0434\u0430\u0432\u0446\u043E\u0432 \u043A\u043E\u0432\u0430\u043D\u044B\u0445 \u0438\u0437\u0434\u0435\u043B\u0438\u0439, \u043C\u044B \u0441 \u0443\u0432\u0435\u0440\u0435\u043D\u043D\u043E\u0441\u0442\u044C\u044E \u043C\u043E\u0436\u0435\u043C \u0441\u043A\u0430\u0437\u0430\u0442\u044C, \u0447\u0442\u043E \u0434\u0430\u0451\u043C \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u044E \u043D\u0430\u0448\u0438\u0445 \u0446\u0435\u043D. \u042D\u0442\u043E \u043E\u0437\u043D\u0430\u0447\u0430\u0435\u0442, \u0447\u0442\u043E \u0432 \u0446\u0435\u043D\u043E\u043E\u0431\u0440\u0430\u0437\u043E\u0432\u0430\u043D\u0438\u0435 \u0432\u0445\u043E\u0434\u0438\u0442 \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C \u043C\u0435\u0442\u0430\u043B\u043B\u0430, \u0438 \u043F\u043E\u043A\u0440\u0430\u0441\u043A\u0430.
-price.list.title2=\u041E\u0442\u0434\u0435\u043B\u044C\u043D\u043E \u043E\u043F\u043B\u0430\u0447\u0438\u0432\u0430\u0435\u0442\u0441\u044F \u0442\u043E\u043B\u044C\u043A\u043E \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0430 \u0438 \u043C\u043E\u043D\u0442\u0430\u0436 \u0438\u0437\u0434\u0435\u043B\u0438\u0439, \u043E \u0447\u0435\u043C \u043C\u044B \u0441\u0440\u0430\u0437\u0443 \u043F\u0440\u0435\u0434\u0443\u043F\u0440\u0435\u0436\u0434\u0430\u0435\u043C \u043A\u043B\u0438\u0435\u043D\u0442\u043E\u0432. \u0412 \u043D\u0435\u043A\u043E\u0442\u043E\u0440\u044B\u0445 \u0441\u043B\u0443\u0447\u0430\u044F\u0445 \u043C\u044B \u043E\u0441\u0443\u0449\u0435\u0441\u0442\u0432\u043B\u044F\u0435\u043C \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0443 \u0431\u0435\u0441\u043F\u043B\u0430\u0442\u043D\u043E. \u041C\u044B \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E \u0444\u0438\u043A\u0441\u0438\u0440\u0443\u0435\u043C \u0443\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u043D\u044B\u0435 \u0432 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0435 \u0446\u0435\u043D\u044B \u043D\u0430 \u043A\u043E\u0432\u0430\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u0438 \u0440\u0430\u0431\u043E\u0442\u0443. \u0421 \u043D\u0430\u043C\u0438 \u043C\u043E\u0436\u043D\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0438\u0442\u044C\u0441\u044F!
-price.list.title3=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C \u043E\u0441\u0442\u0430\u043B\u044C\u043D\u044B\u0445 \u043A\u043E\u0432\u0430\u043D\u044B\u0445 \u0434\u0435\u0442\u0430\u043B\u0435\u0439, \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432 \u0438\u043D\u0442\u0435\u0440\u044C\u0435\u0440\u0430, \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432 \u044D\u043A\u0441\u0442\u0435\u0440\u044C\u0435\u0440\u0430, \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432 \u0434\u0435\u043A\u043E\u0440\u0430, \u0434\u0440\u0443\u0433\u0430\u044F \u043C\u0435\u0431\u0435\u043B\u044C \u0438 \u0442.\u0434. \u043E\u0431\u0441\u0443\u0436\u0434\u0430\u0435\u0442\u0441\u044F \u0438\u043D\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043B\u044C\u043D\u043E.
-price.list.title4=\u0426\u0435\u043D\u044B \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u043D\u044B\u0435 \u0432 \u0442\u0430\u0431\u043B\u0438\u0446\u0435 \u043D\u0435 \u044F\u0432\u043B\u044F\u044E\u0442\u0441\u044F \u043E\u043A\u043E\u043D\u0447\u0430\u0442\u0435\u043B\u044C\u043D\u044B\u043C\u0438, \u0441 \u043A\u0430\u0436\u0434\u044B\u043C \u043A\u043B\u0438\u0435\u043D\u0442\u043E\u043C \u043E\u0431\u0441\u0443\u0436\u0434\u0430\u044E\u0442\u0441\u044F \u0438\u043D\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043B\u044C\u043D\u044B\u0435 <span style="color: #ff0000;">\u0421\u041A\u0418\u0414\u041A\u0418</span>,&nbsp;\u0437\u0430\u0432\u0438\u0441\u044F\u0449\u0438\u0435 \u043E\u0442 \u043E\u0431\u044A\u0435\u043C\u0430 \u0440\u0430\u0431\u043E\u0442!
+price.list.title1=100% guarantee of a low price for forged products. Unlike many of our competitors, exhibition halls and other sellers of forged products, we can confidently say that we give a guarantee of our prices. This means that the pricing includes the cost of metal, and painting.
+price.list.title2=Separately paid only delivery and installation of products, which we immediately warn customers. In some cases, we deliver free of charge. We guarantee to fix the prices for forged products and work approved in the contract. With us you can negotiate!
+price.list.title3=The cost of other forged parts, interior elements, exterior elements, decor elements, other furniture, etc. Is discussed individually.
+price.list.title4=Prices presented in the table are not final, with each client discussing individual <span style = "color: # ff0000;"> DISCOUNTS </ span>, & nbsp; depending on the amount of work!
 #feedback
-feedback.title1=\u0412\u044B\u0437\u043E\u0432\u0438\u0442\u0435 \u043D\u0430\u0448\u0435\u0433\u043E \u043C\u0430\u0441\u0442\u0435\u0440\u0430 \u0434\u043B\u044F \u0437\u0430\u043C\u0435\u0440\u0430
-feedback.title2=\u0411\u0415\u0421\u041F\u041B\u0410\u0422\u041D\u041E
+feedback.title1=Call our master for the measurement
+feedback.title2=FREE
 feedback.title3=\u041C\u044B \u0438\u0437\u0433\u043E\u0442\u0430\u0432\u043B\u0438\u0432\u0430\u0435\u043C \u043B\u044E\u0431\u044B\u0435 \u043A\u0430\u043A <span style="color: #ff0000;">\u043A\u043E\u0432\u0430\u043D\u044B\u0435 \u0442\u0430\u043A \u0438 \u0441\u0432\u0430\u0440\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F</span> \u0438\u0437 \u043C\u0435\u0442\u0430\u043B\u043B\u0430! \u041D\u0430\u0448\u0438 \u0438\u043D\u0436\u0435\u043D\u0435\u0440\u044B \u0440\u0430\u0437\u0440\u0430\u0431\u043E\u0442\u0430\u044E\u0442 \u0434\u043B\u044F \u0412\u0430\u0441 \u044D\u0441\u043A\u0438\u0437\u044B \u0432\u0430\u0448\u0438\u0445 \u0431\u0443\u0434\u0443\u0449\u0438\u0445 \u0438\u0437\u0434\u0435\u043B\u0438\u0439 \u0438 \u043F\u0440\u043E\u043A\u043E\u043D\u0441\u0443\u043B\u044C\u0442\u0438\u0440\u0443\u044E\u0442 \u043F\u043E \u0432\u044B\u0431\u043E\u0440\u0443 \u0442\u0438\u043F\u043E\u0432\u044B\u0445 \u0438 \u043D\u0435\u0441\u0442\u0430\u043D\u0434\u0430\u0440\u0442\u043D\u044B\u0445 \u0440\u0435\u0448\u0435\u043D\u0438\u0439.
-feedback.title4=\u0422\u0430\u043A \u0436\u0435 \u043C\u044B \u043F\u0440\u0438\u043D\u0438\u043C\u0430\u0435\u043C \u0437\u0430\u044F\u0432\u043A\u0438 \u043D\u0430 \u043F\u043E\u0447\u0442\u0443 \u043A\u0440\u0443\u0433\u043B\u043E\u0441\u0443\u0442\u043E\u0447\u043D\u043E:
+feedback.title4=We also accept orders for mail 24 hours a day:
 feedback.form.name=Your name (required)
 feedback.form.phone=Your phone (required)
 feedback.form.email=Your email (required)
@@ -111,7 +112,7 @@ right.banner.useful.articles=Useful articles
 footer.tel=Tel
 
 page.search.title=Search result for
-page.how.we.work=\u041D\u0430\u0448\u0430 \u043A\u043E\u043C\u043F\u0430\u043D\u0438\u044F \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u0442 \u043F\u043E \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u0439 \u0441\u0445\u0435\u043C\u0435
+page.how.we.work=Our company works according to the following scheme
 
 admin.page.sketch.category.main=Main
 admin.page.sketch.category.offer=Offer
