--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -55,7 +55,7 @@ sketches.title.add=Sketch Add
 sketches.title.Product=Product
 #
 more.info.button=more info
-title.home=MNG \u041A\u043E\u0432\u043A\u0430
+title.home=NMG \u041A\u043E\u0432\u043A\u0430
 #menu
 menu.home=Home
 menu.services=Services
@@ -81,8 +81,8 @@ price.list.productionTime=Production time
 work.scheme.name=name
 work.scheme.description=description
 #page
-page.title=MNG \u041A\u043E\u0432\u043A\u0430
-page.home.title=\u00ABMNG \u041A\u043E\u0432\u043A\u0430\u00BB has long and firmly established itself in the metalworking market
+page.title=NMG \u041A\u043E\u0432\u043A\u0430
+page.home.title=\u00ABNMG \u041A\u043E\u0432\u043A\u0430\u00BB has long and firmly established itself in the metalworking market
 page.home.content=Our company has only a very high level of expertise in our work, and we can book your favorite items anywhere. We occupy a well-deserved place among the competitors. By distributing the spectrum of the spectrum in the field of machining, our experts will carefully examine the best practices. Our company is working with optical orders, and with individuality.
 #footer
 footer.info=&copy; 2017 \u041A\u043E\u0432\u0430\u043D\u044B\u0435 \u0438 \u0441\u0432\u0430\u0440\u043D\u044B\u0435 \u0438\u0437\u0434\u0435\u043B\u0438\u044F \u043D\u0430 \u0437\u0430\u043A\u0430\u0437 \u0432 \u041C\u043E\u0441\u043A\u0432\u0435 \u0438 \u041C\u043E\u0441\u043A\u043E\u0432\u0441\u043A\u043E\u0439 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
